backup/firestore-cronjob.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backup
  labels:
    pod-security.kubernetes.io/enforce: restricted
